amend 6.14